--- a/index.ipynb
+++ b/index.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "y = None\n",
     "x =None\n",
-    "labels = None\n",
+    "labels = [crime, science_fiction, drama, comedy, action, documentary]\n",
     "\n",
     "# Set a figure size\n",
     "\n",
@@ -200,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
